# NaMeco

./: .gitignore  NaMeco.yaml  README.md  meta.yaml  nameco.py  pyproject.toml  setup.py
Notebooks/: NaMeco_runs.ipynb  Tools_comparison.ipynb  Workflow_NaMeco.ipynb
Recipe/: meta.yaml
nameco/: nameco  nameco.py  run_nameco.py
src/nameco/: run_nameco.py
